<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Air Tips</string>
    <string name="action_ok">ok</string>
    <string name="title_activity_configure">Setting</string>
    <string name="setting_category_location">Location</string>
    <string name="setting_category_style">Display Mode</string>
    <string name="setting_item_icon">Icon</string>
    <string name="setting_item_number">Value</string>
    <string name="setting_item_dark">Dark</string>
    <string name="setting_item_light">Light</string>
    <string name="setting_category_color">Color</string>
    <string name="empty"></string>
    <string name="setting_location_hint">Input your location</string>
    <string name="about_data_sources">Data provided by www.pm25.in</string>
    <string name="feedback">Air Tips Feedback</string>
    <string name="about_detail_title">About us</string>
    <string name="query_wait">Updating</string>
    <string name="about_version">Version %s</string>
    <string name="about_copyright">"Copyright©2014 %s
All Right Reserved"</string>
    <string name="about_rating_us">Rate us</string>
    <string name="about_contact_us">Contact us</string>
    <string name="about">about</string>
    <string name="setting_location_title">Location</string>
    <string name="about_tutorial">Tutorials</string>
    <string name="title_activity_tutorials">Tutorials</string>
    <string name="action_settings">Settings</string>

    <string name="tutorial_1_title">Begin Setup</string>
    <string name="tutorial_1_message">Click an empty area on desktop to add a new widget</string>
    <string name="tutorial_2_title">Enter the Widgets Page</string>
    <string name="tutorial_2_message">Click the WIDGETS button</string>
    <string name="tutorial_3_title">Locate Air Tips Widget</string>
    <string name="tutorial_3_message">Scroll and find the Air Tips widget</string>
    <string name="tutorial_4_title">Create a New Widget on Desktop</string>
    <string name="tutorial_4_message">Drag and drop a new Air Tips widget to the desktop</string>
    <string name="tutorial_5_title">Complete the Setup</string>
    <string name="tutorial_5_message">Choose your location and theme</string>
</resources>
