<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/setting_bg"
    android:scrollbars="none"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.baiya.practice.pm25.AboutActivity">

    <LinearLayout
        android:orientation="vertical"
        android:id="@id/container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:id="@id/top_container"
                android:layout_alignParentTop="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginTop="35.0dip"
                    android:src="@drawable/about_logo"
                    android:scaleType="fitXY"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="22.0dip"
                    android:textColor="#ff484a46"
                    android:id="@id/app_name"
                    android:background="@null"
                    android:layout_marginTop="26.0dip"
                    android:text="@string/app_name"
                    style="@style/MySettingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textSize="15.0dip"
                    android:textColor="#ff878787"
                    android:id="@id/app_version"
                    android:background="@null"
                    android:layout_marginTop="15.0dip"
                    android:text="@string/about_version"
                    style="@style/MySettingText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:id="@id/middle_container"
                android:layout_marginTop="26.0dip"
                android:layout_below="@id/top_container"
                android:layout_centerVertical="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <View style="@style/MySettingDivider" />

                <TextView
                    android:id="@id/tutorials"
                    android:clickable="true"
                    android:text="@string/about_tutorial"
                    android:drawableRight="@drawable/setting_arrow"
                    style="@style/MySettingText" />

                <View style="@style/MySettingDivider" />

                <TextView
                    android:id="@id/contact_us"
                    android:clickable="true"
                    android:text="@string/about_contact_us"
                    android:drawableRight="@drawable/setting_arrow"
                    style="@style/MySettingText" />

                <View style="@style/MySettingDivider" />

                <TextView
                    android:id="@id/rating_us"
                    android:clickable="true"
                    android:text="@string/about_rating_us"
                    android:drawableRight="@drawable/setting_arrow"
                    style="@style/MySettingText" />

                <View style="@style/MySettingDivider" />

                <TextView
                    android:id="@id/data_sources"
                    android:clickable="true"
                    android:text="@string/about_data_sources"
                    android:drawableRight="@drawable/setting_arrow"
                    style="@style/MySettingText" />

                <View style="@style/MySettingDivider" />
            </LinearLayout>

            <LinearLayout
                android:gravity="bottom|center"
                android:orientation="vertical"
                android:id="@id/bottom_container"
                android:layout_below="@id/middle_container"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <ImageView
                    android:id="@id/about_indicator"
                    android:src="@drawable/about_indicator"
                    android:scaleType="fitXY"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>